# fmtron

./: Cargo.toml  README.md
src/: arguments.rs  lib.rs  main.rs  ron.pest
src/ast/: display.rs  mod.rs
test_data/: edge_case_numbers.ron  empty_collections.ron  large_numbers.ron  mixed_types.ron  nested_structures.ron  raw_string.ron  simple_struct.ron  unicode.ron  unit.ron
test_data/formatted/: deeply_nested.ron  edge_case_numbers.ron  empty_collections.ron  large_numbers.ron  map.ron  mixed_types.ron  multiple_extensions.ron  nested_structures.ron  raw_string.ron  simple_struct.ron  tuple.ron  unicode.ron  unit.ron  with_comments.ron  with_extension.ron
test_data/unformatted/: deeply_nested.ron  edge_case_numbers.ron  empty_collections.ron  large_numbers.ron  list.ron  map.ron  mixed_types.ron  multiple_extensions.ron  nested_structures.ron  raw_string.ron  simple_struct.ron  tuple.ron  unicode.ron  unit.ron  with_comments.ron  with_extension.ron
tests/: format_ron.rs
