[package]
name = "fmtron"
version = "0.3.1"
authors = [
  "Anton Filippov <a.filippov@protonmail.com>",
  "Rafael Bachmann <rafael.bachmann.93@gmail.com",
]
description = "A simple tool for autoformatting RON files."
homepage = "https://github.com/Ristarg/ronfmt"
readme = "README.md"
keywords = ["RON", "autoformatting", "beautify", "pretty-print"]
categories = ["command-line-utilities", "development-tools", "value-formatting"]
license = "MIT"
repository = "https://github.com/barafael/fmtron"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
clap-stdin = "0.8.0"
itertools = "0.14.0"
pest = "2.8"
pest_derive = "2.8"
